# gametainer

./: .dockerignore  .gitattributes  .gitignore  .sops.yaml  Cargo.toml  Justfile  README.md  versions.json
.github/workflows/: images.yml  release.yml
crates/gamer/: Cargo.toml
crates/gamer/src/: main.rs  sha256.rs  validation.rs
crates/gamer/tests/: offline.rs
crates/gametainer/: Cargo.toml
crates/gametainer-core/: Cargo.toml
crates/gametainer-core/src/: gamer.rs  ids.rs  lib.rs  runtime.rs
crates/gametainer-storage/: Cargo.toml
crates/gametainer-storage/src/: lib.rs  models.rs  repository.rs  sqlite.rs
crates/gametainer-templates/: Cargo.toml
crates/gametainer-templates/src/: lib.rs
crates/gametainer/src/: docker.rs  main.rs
crates/gametainer/tests/: export.rs
docs/: cli-conventions.md  gamer-configuration.md  llm-brief.md  mvp-implementation-plan.md  product-architecture.md  release-packaging.md  template-catalog.md  terminology.md
fixtures/templates/: README.md  index.yaml
fixtures/templates/games/factorio/: definition.yaml  settings.spec.yaml  settings.template.yaml
fixtures/templates/games/palworld/: definition.yaml  settings.spec.yaml  settings.template.yaml
images/base/: Dockerfile
images/base-fex/: Dockerfile
images/scripts/: minimize-rootfs.sh
images/steamcmd/: Dockerfile
images/steamcmd-fex/: Dockerfile
images/steamcmd-wine/: Dockerfile
images/steamcmd-wine-fex/: Dockerfile
images/wine/: Dockerfile
images/wine-fex/: Dockerfile
scripts/: git-sops.sh  package-release.sh
(+6 files in other folders)
