[workspace]
members = [
    "crates/gametainer",
    "crates/gamer",
    "crates/gametainer-core",
    "crates/gametainer-storage",
    "crates/gametainer-templates",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gametainer/gametainer"
version = "0.1.0"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
gametainer-core = { path = "crates/gametainer-core" }
gametainer-storage = { path = "crates/gametainer-storage" }
gametainer-templates = { path = "crates/gametainer-templates" }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.9"
